--- a/report/main.tex
+++ b/report/main.tex
@@ -118,7 +118,7 @@
 \input{software_results.tex}
 
 \clearpage
-\section{Inertial Navigation System and Kalman filter}
+\section{Inertial Navigation System and Kalman Filter}
 \label{kf}
 \chapterauthor{Axelsson, Oskar (Theolin, Henrik)}
 \input{kf.tex}
